<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/projectdetailsbtn1"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:onClick="projectdetailsbtn"
        android:text="@string/projectDeatilsbtn2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/discount1"
        android:layout_width="173dp"
        android:layout_height="44dp"
        android:text="@string/discount"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <RadioGroup
        android:id="@+id/packages1"
        android:layout_width="375dp"
        android:layout_height="68dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602">

        <RadioButton
            android:id="@+id/senior1"
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:buttonTint="@android:color/holo_orange_light"
            android:text="@string/senior2"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/student1"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_orange_light"
            android:text="@string/student2"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/publicServant1"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_orange_light"
            android:text="@string/publicServant2"
            android:textColor="@color/white" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/projectDuration1"
        android:layout_width="384dp"
        android:layout_height="63dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454">

        <RadioButton
            android:id="@+id/onehour1"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:buttonTint="@android:color/holo_orange_light"
            android:text="@string/oneHour2"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/oneday1"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:buttonTint="@android:color/holo_orange_light"
            android:text="@string/oneDay2"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/twodays1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_orange_light"
            android:text="@string/twoDays2"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/threedays1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_orange_light"
            android:text="@string/threeDays2"
            android:textColor="@color/white" />

    </RadioGroup>

    <TextView
        android:id="@+id/timeLength1"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:text="@string/timeLength"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <CheckBox
        android:id="@+id/smallTeam1"
        android:layout_width="92dp"
        android:layout_height="46dp"
        android:buttonTint="@android:color/holo_orange_light"
        android:text="@string/smallTeam"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <CheckBox
        android:id="@+id/largeTeam1"
        android:layout_width="124dp"
        android:layout_height="45dp"
        android:buttonTint="@android:color/holo_orange_light"
        android:text="@string/largeTeam"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/laborRequirement1"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:text="@string/laborRequirement"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <Spinner
        android:id="@+id/loadsizeSpinner1"
        android:layout_width="195dp"
        android:layout_height="47dp"
        android:background="@color/white"
        android:entries="@array/Project_Size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectsizePrompt1"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/projectsizePrompt1"
        android:layout_width="287dp"
        android:layout_height="39dp"
        android:text="@string/projectSize"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle1"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/appTitle1"
        android:layout_width="382dp"
        android:layout_height="54dp"
        android:text="@string/apptitle"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/estimatebtn1"
        android:layout_width="164dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:onClick="getestimatebtn"
        android:text="@string/getestimate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299"
        app:srcCompat="@drawable/icons8_trash_200___" />

    <TextView
        android:id="@+id/userinput"
        android:layout_width="377dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

</androidx.constraintlayout.widget.ConstraintLayout>